<resources>
    <string name="app_name">WeatherForecast</string>
    <string name="initial_setup">Initial Setup</string>
    <string name="location">Location</string>
    <string name="GPS">GPS</string>
    <string name="Map">Map</string>
    <string name="notification">Notifications</string>
    <string name="ok">ok</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Alerts</string>
    <string name="weather">Weather</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_alerts">Alerts</string>
    <string name="pressure_unit">hpa</string>
    <string name="pressure">Pressure</string>
    <string name="percentage">%</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="temperature">Temperature</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="m_sec">Meter / Sec</string>
    <string name="mile_h">Mile / Hour</string>
    <string name="notifications">Notifications</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="notification_time">Notification Time</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="ultraViolet">Ultra Violet</string>
    <string name="visibility">Visibility</string>
    <string name="m">" m"</string>
    <string name="f">F</string>
    <string name="k">K</string>
    <string name="c">C</string>
    <string name="favourites_fragment">"Favourites "</string>
</resources>