<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_ic"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/favouritesFragment"
            android:icon="@drawable/favourites_ic"
            android:title="@string/menu_favourites" />
        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/alert_ic"
            android:title="@string/menu_alerts" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_ic"
            android:title="@string/action_settings" />
    </group>
</menu>