<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_background"
    android:padding="25dp">

    <ImageView
         android:id="@+id/settings_img"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/settings_ic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />

     <RadioGroup
         android:id="@+id/location_rg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/location_txt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/location_txt">

         <RadioButton
             android:id="@+id/gps_rb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true"
             android:text="@string/GPS"
             android:textColor="@color/white" />

         <RadioButton
             android:id="@+id/radio_male"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Map"
             android:textColor="@color/white" />
     </RadioGroup>

     <TextView
         android:id="@+id/location_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/location"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settings_img" />


     <TextView
         android:id="@+id/notification_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/notification"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/location_txt" />

     <TextView
         android:id="@+id/initialSetup_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:text="@string/initial_setup"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/settings_img"
         app:layout_constraintStart_toEndOf="@+id/settings_img"
         app:layout_constraintTop_toTopOf="@+id/settings_img" />

     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/notification_toggle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:thumb="@drawable/thumb"
         app:layout_constraintBottom_toBottomOf="@+id/notification_txt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/notification_txt"
         app:track="@drawable/track" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ok_btn"
        android:text="@string/ok"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_txt"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_rounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>

