<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/settingsNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:fillViewport="true"
        android:padding="10dp"
        tools:context=".home.settings.view.SettingsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settingsConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/location_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/titles_settings"
                android:gravity="center"
                android:text="@string/location"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/language_txt"
                app:layout_constraintWidth_percent="0.45" />

            <TextView
                android:id="@+id/language_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/titles_settings"
                android:gravity="center"
                android:text="@string/language"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/location_txt"
                app:layout_constraintTop_toTopOf="@+id/location_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.45" />

            <androidx.cardview.widget.CardView
                android:id="@+id/location_card"
                app:layout_constraintTop_toBottomOf="@+id/location_txt"
                app:layout_constraintStart_toStartOf="@+id/location_txt"
                app:layout_constraintEnd_toEndOf="@+id/location_txt"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                app:layout_constraintWidth_percent="0.45"
                app:cardBackgroundColor="@color/gray_background"
                app:cardCornerRadius="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/location_rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    app:layout_constraintEnd_toEndOf="parent">

                    <RadioButton
                        android:id="@+id/gps_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/GPS"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/map_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Map"
                        android:textColor="@color/white" />
                </RadioGroup>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/language_card"
                app:layout_constraintTop_toBottomOf="@+id/language_txt"
                app:layout_constraintStart_toStartOf="@+id/language_txt"
                app:layout_constraintEnd_toEndOf="@+id/language_txt"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                app:layout_constraintWidth_percent="0.45"
                app:cardBackgroundColor="@color/gray_background"
                app:cardCornerRadius="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/language_rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    app:layout_constraintEnd_toEndOf="parent">

                    <RadioButton
                        android:id="@+id/english_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/english"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/arabic_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/arabic"
                        android:textColor="@color/white" />
                </RadioGroup>


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/temp_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/titles_settings"
                android:gravity="center"
                android:text="@string/temperature"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@+id/location_txt"
                app:layout_constraintTop_toBottomOf="@+id/location_card"
                app:layout_constraintEnd_toStartOf="@+id/windSpeed_txt"
                app:layout_constraintWidth_percent="0.45" />

            <TextView
                android:id="@+id/windSpeed_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/titles_settings"
                android:gravity="center"
                android:text="@string/windSpeed"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/temp_txt"
                app:layout_constraintTop_toTopOf="@+id/temp_txt"
                app:layout_constraintEnd_toEndOf="@+id/language_txt"
                app:layout_constraintWidth_percent="0.45" />

            <androidx.cardview.widget.CardView
                android:id="@+id/temp_card"
                app:layout_constraintTop_toBottomOf="@+id/temp_txt"
                app:layout_constraintStart_toStartOf="@+id/location_card"
                app:layout_constraintEnd_toEndOf="@+id/location_card"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                app:layout_constraintWidth_percent="0.45"
                app:cardBackgroundColor="@color/gray_background"
                app:cardCornerRadius="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/temp_rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    app:layout_constraintEnd_toEndOf="parent">

                    <RadioButton
                        android:id="@+id/celsius_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/celsius"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/kelvin_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kelvin"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/fahrenheit_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fahrenheit"
                        android:textColor="@color/white" />
                </RadioGroup>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/windSpeed_card"
                app:layout_constraintTop_toBottomOf="@+id/windSpeed_txt"
                app:layout_constraintStart_toStartOf="@+id/language_card"
                app:layout_constraintEnd_toEndOf="@+id/language_card"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                app:layout_constraintWidth_percent="0.45"
                app:cardBackgroundColor="@color/gray_background"
                app:cardCornerRadius="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/windSpeed_rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    app:layout_constraintEnd_toEndOf="parent">

                    <RadioButton
                        android:id="@+id/meter_sec_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/m_sec"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/mile_h_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mile_h"
                        android:textColor="@color/white" />
                </RadioGroup>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/notifications_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/titles_settings"
                android:gravity="center"
                android:text="@string/notifications"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@+id/location_txt"
                app:layout_constraintTop_toBottomOf="@+id/temp_card"
                app:layout_constraintEnd_toEndOf="@+id/temp_txt"
                app:layout_constraintWidth_percent="0.45" />

            <androidx.cardview.widget.CardView
                android:id="@+id/notifications_card"
                app:layout_constraintTop_toBottomOf="@+id/notifications_txt"
                app:layout_constraintStart_toStartOf="@+id/temp_card"
                app:layout_constraintEnd_toEndOf="@+id/temp_card"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                app:layout_constraintWidth_percent="0.45"
                app:cardBackgroundColor="@color/gray_background"
                app:cardCornerRadius="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/notifications_rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    app:layout_constraintEnd_toEndOf="parent">

                    <RadioButton
                        android:id="@+id/enable_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/enable"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/disable_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/disable"
                        android:textColor="@color/white" />

                </RadioGroup>

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
</layout>