<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_background"
    android:padding="25dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/from_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:text="@string/from"
        android:textColor="@color/white"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/to_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:text="@string/to"
        app:layout_constraintWidth_percent="0.45"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/fromTime_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@id/from_btn"
        app:layout_constraintStart_toStartOf="@id/from_btn"
        app:layout_constraintTop_toBottomOf="@+id/from_btn">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/fromTime_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="16sp"
                android:text="2:00 AM"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/fromDate_txt"
                app:layout_constraintTop_toBottomOf="@+id/fromTime_txt"
                app:layout_constraintStart_toStartOf="@+id/fromTime_txt"
                app:layout_constraintEnd_toEndOf="@+id/fromTime_txt"
                android:text="26 Feb, 2022"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/toTime_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@id/to_btn"
        app:layout_constraintStart_toStartOf="@id/to_btn"
        app:layout_constraintTop_toBottomOf="@+id/to_btn">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/toTime_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="16sp"
                android:text="2:00 AM"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/toDate_txt"
                app:layout_constraintTop_toBottomOf="@+id/toTime_txt"
                app:layout_constraintStart_toStartOf="@+id/toTime_txt"
                app:layout_constraintEnd_toEndOf="@+id/toTime_txt"
                android:text="26 Feb, 2022"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/notificationTime_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:text="@string/notification_time"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/fromTime_card"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:text="@string/save"
        app:layout_constraintWidth_percent="0.45"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/notificationTime_btn"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>